--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>4.3.1</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
