--- a/configuration.properties
+++ b/configuration.properties
@@ -2,3 +2,6 @@
 library1.database.url=jdbc:mysql://18.233.97.71:3306/library1
 library1.database.username=library1_client
 library1.database.password=WVF4NdGXCKHeE6VQ
+library1.base_url=http://library1.cybertekschool.com
+library1.librarian_username=librarian69@library
+library1.librarian_password=KNPXrm3S
