--- a/configuration.properties
+++ b/configuration.properties
@@ -1,7 +1,15 @@
-# for library app
+# for library1 env2
 library1.database.url=jdbc:mysql://18.233.97.71:3306/library1
 library1.database.username=library1_client
 library1.database.password=WVF4NdGXCKHeE6VQ
 library1.base_url=http://library1.cybertekschool.com
 library1.librarian_username=librarian69@library
 library1.librarian_password=KNPXrm3S
+
+# for library2 env
+library2.database.url=jdbc:mysql://18.233.97.71:3306/library2
+library2.database.username=library2_client
+library2.database.password=6s2LQQTjBcGFfDhY
+library2.base_url=http://library2.cybertekschool.com
+library2.librarian_username=ibrarian570@library
+library2.librarian_password=2gCucjjn
