squash! Day07 : Added library3 environment data

--- a/configuration.properties
+++ b/configuration.properties
@@ -13,3 +13,11 @@ library2.database.password=6s2LQQTjBcGFfDhY
 library2.base_url=http://library2.cybertekschool.com
 library2.librarian_username=librarian570@library
 library2.librarian_password=2gCucjjn
+
+# for library3 env
+library3.database.url=jdbc:mysql://18.233.97.71:3306/library3
+library3.database.username=library3_client
+library3.database.password=Pzi75akktLC4BoI9
+library3.base_url=http://library3.cybertekschool.com
+library3.librarian_username=librarian11@library
+library3.librarian_password=shpUFwRF
