--- a/configuration.properties
+++ b/configuration.properties
@@ -1,4 +1,6 @@
-# for library1 env2
+# setting the active environment
+active_env=library1
+# for library1 env
 library1.database.url=jdbc:mysql://18.233.97.71:3306/library1
 library1.database.username=library1_client
 library1.database.password=WVF4NdGXCKHeE6VQ
