Day08 : Added Spartan DB connection String and username and password

--- a/configuration.properties
+++ b/configuration.properties
@@ -23,3 +23,8 @@ library3.database.password=Pzi75akktLC4BoI9
 library3.base_url=http://library3.cybertekschool.com
 library3.librarian_username=librarian11@library
 library3.librarian_password=shpUFwRF
+
+# Spartan App info
+spartan1.database.url=jdbc:oracle:thin:@100.25.192.231:8000:XE
+spartan1.database.username=SP
+spartan1.database.password=SP
