Day08 : ADDED Spartan DB Connection info , try using your IP

--- a/configuration.properties
+++ b/configuration.properties
@@ -24,7 +24,7 @@ library3.base_url=http://library3.cybertekschool.com
 library3.librarian_username=librarian11@library
 library3.librarian_password=shpUFwRF
 
-# Spartan App info
+# Spartan App info // try using your own IP
 spartan1.database.url=jdbc:oracle:thin:@100.25.192.231:1521:XE
 spartan1.database.username=SP
 spartan1.database.password=SP
