Day10 : moved the base_url out the source code , combined the base_url and port

--- a/configuration.properties
+++ b/configuration.properties
@@ -28,3 +28,4 @@ library3.librarian_password=shpUFwRF
 spartan1.database.url=jdbc:oracle:thin:@54.174.216.245:1521:XE
 spartan1.database.username=SP
 spartan1.database.password=SP
+spartan1.base_url=http://54.174.216.245:8000
